<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount"
    android:background="?colorPrimaryDark"
    android:id="@+id/createAccountLayout">

    <androidx.appcompat.widget.Toolbar
        android:id ="@+id/createAccountToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:titleTextColor = "@android:color/white"
        android:background = "@color/colorPrimary"
        android:title="@string/homeActionBarTitle"
        >

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCreateAccount"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@android:color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="124dp"
                android:layout_marginBottom="60dp"
                android:text="@string/createAccountCreateAccount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@color/colorPrimary"

                />

            <EditText
                android:id="@+id/emailEnter"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="200dp"
                android:hint="@string/createAccountEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passwordEnter"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                app:layout_constraintTop_toBottomOf="@+id/emailEnter"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="@string/createAccountPassword"
               />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/createAccountLogin"
                android:layout_marginLeft="138dp"
                android:layout_marginBottom="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>